<resources>
    <string name="app_name">Flexiride</string>
    <string name="sign_up_text">Sign up</string>
    <string name="email_address">Email Address</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="retype_new_password">Retype Password</string>
    <string name="i_agree_to_terms_of_service_and_privacy_policy">I agree to Terms of Service and Privacy policy.</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="text_and_number">aAbBcCdDeEfFgGhHiIjJkKlLmMnNoOpPqQrRsStTuUvVwWxXyY zZ0123456789 æàáâäāåãçēêéèëìïíîīñõōòöóôßūüúûùÀÃÂĀÁÅĀÆÇĒÊÉÈËÌÏÍÎĪÑÕŌŒØÒÖÓÔẞŪÜÚÛÙ</string>
    <string name="only_text">aAbBcCdDeEfFgGhHiIjJkKlLmMnNoOpPqQrRsStTuUvVwWxXyY zZæàáâäāåãçēêéèëìïíîīñõōòöóôßūüúûùÀÃÂĀÁÅĀÆÇĒÊÉÈËÌÏÍÎĪÑÕŌŒØÒÖÓÔẞŪÜÚÛÙ</string>
    <string name="only_numbers"> 0123456789</string>
    <string name="enter_first_name">Please enter first name</string>
    <string name="enter_last_name">Please enter last name</string>
    <string name="enter_password">Please enter password</string>
    <string name="password_8_20">Enter atleast 8-20 characters, 1 Uppercase, 1 lowercase and 1 Number</string>
    <string name="enter_retype_pass">Please retype password</string>
    <string name="enter_valid_email_add">Please enter valid email address</string>
    <string name="pick_up">Pick up</string>
    <string name="drop_off">Drop off</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="filter">FILTER</string>
    <string name="sort_by">Sort By</string>
    <string name="tuvs_available_yet">You don\'t have any cars available yet</string>
    <string name="rating_reviews">0 ratings and 0 reviews</string>
    <string name="_0_0">0.0</string>
    <string name="don_t_have_an_account">Don\'t have an account? Sign up</string>
    <string name="welcome">Welcome To Flexiride</string>
    <string name="i_m_an_owner">I\'m an Owner!</string>
    <string name="i_m_a_renter">I\'m a Renter!</string>
    <string name="add_your_first_tuv">Add your first Car</string>
    <string name="view_details">View Details</string>
    <string name="accept">accept</string>
    <string name="reject">reject</string>
    <string name="basic_info_title">Basic information about your car</string>
    <string name="tuv_brand">Car Brand</string>
    <string name="tuv_color">Car Color</string>
    <string name="tuv_model">Car Model</string>
    <string name="model_name">Enter model name</string>
    <string name="manufacturing_year">Manufacturing Year</string>
    <string name="license_plate_number">License plate number</string>
    <string name="licence_type">License Type</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">city</string>
    <string name="number_of_seats">number of seats</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="gear_box">Gear Box</string>
    <string name="engine">Engine</string>
    <string name="tell_more">Tell us more about your car</string>
    <string name="text_continue">Continue</string>
    <string name="model_name_error">Please enter model name</string>
    <string name="manu_year_error">Please select manufactured year</string>
    <string name="license_plate_error">Please enter license plate number</string>
    <string name="brand_name_error">Please select brand</string>
    <string name="color_name_error">Please select color</string>
    <string name="tuv_type_error">Please select type</string>
    <string name="engine_cc_error">Please enter engine data</string>
    <string name="county_error">Please enter County</string>
    <string name="city_error">Please enter City</string>
    <string name="seat_error">Please enter number of seats</string>
    <string name="fuel_error">Please enter Fuel type</string>
    <string name="gear_error">Please enter Gear type</string>
    <string-array name="array_name">
        <item>Select category</item>
    </string-array>
    <string-array name="array_city">
        <item>Select City</item>
        <item>Birmingham</item>
        <item>Bradford</item>
        <item>Bristol</item>
        <item>Cambridge</item>
        <item>Chester</item>
        <item>Coventry</item>
        <item>Leeds</item>
        <item>Leicester</item>
        <item>Liverpool</item>
        <item>London</item>
        <item>Manchester</item>
        <item>Norwich</item>
        <item>Nottingham</item>
        <item>Oxford</item>
        <item>Plymouth</item>
        <item>Portsmouth</item>
        <item>Sheffield</item>
        <item>Southampton</item>
        <item>St Albans</item>
        <item>Westminster</item>
        <item>York</item>
    </string-array>
    <string-array name="array_gear">
        <item>Select Gear</item>
        <item>Automatic</item>
        <item>Manual</item>
    </string-array>
    <string-array name="array_fuel">
        <item>Select Fuel</item>
        <item>Petrol</item>
        <item>Diesel</item>
        <item>Electric</item>
    </string-array>
    <string-array name="array_seats">
        <item>Select Seats</item>
        <item>02</item>
        <item>04</item>
        <item>06</item>
        <item>07</item>
    </string-array>
    <string-array name="array_color">
        <item>Select Color</item>
        <item>White</item>
        <item>Black</item>
        <item>Red</item>
        <item>Blue</item>
        <item>Silver</item>
        <item>Gray</item>
        <item>Brown</item>
        <item>Green</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Beige</item>
        <item>Purple</item>
        <item>Gold</item>
    </string-array>
    <string-array name="brand_name">
        <item>Select Brand</item>
        <item>Alfa Romeo</item>
        <item>Alpine</item>
        <item>Aston Martin</item>
        <item>Audi</item>
        <item>Bentley</item>
        <item>BMW</item>
        <item>Bugatti</item>
        <item>Cadillac</item>
        <item>Chevrolet</item>
        <item>Datsun</item>
        <item>Ferrari</item>
        <item>Fiat</item>
        <item>Ford</item>
        <item>Honda</item>
        <item>Hyundai</item>
        <item>Jaguar</item>
        <item>Jeep</item>
        <item>Kia</item>
        <item>Lamborghini</item>
        <item>Land rover</item>
    </string-array>
    <string name="fare_amount">Fare amount Per hour</string>
    <string name="numbers_decimal"> 0123456789.</string>
    <string name="for_duration">For duration</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="search_location">Search Location</string>
    <string name="book_now">Book Now</string>
    <string name="fare_amt_error">Please enter Fare amount</string>
    <string name="duration_error">Please enter duration </string>
    <string name="add_tuv_photos">Photos of your Car</string>
    <string name="add_photos_title">Make sure you take nice pictures of your car so that customer can see car before selecting.</string>
    <string name="add_upto">You can add up to 4 photos of Car</string>
    <string name="you_have_no_photos_yet_click_on_add_photos_of_tuv">You have no photos yet. Click on add photos of car</string>
    <string name="added_tuv_photos">Added Car Photos</string>
    <string name="car_model">Car model</string>
    <string name="_5_seats"> 5 Seats</string>
    <string name="seats">Seats</string>
    <string name="Key_Specifications"> Key Specifications</string>
    <string name="packages">Package</string>
    <string name="booking_amount">Payment Details</string>
    <string name="fare_amount_for_1_day">Fare amount for 1 day</string>
    <string name="total_fare_amount">Total fare amount</string>
    <string name="view_bookings">View Bookings</string>
    <string name="verify_your_data_to_get_started">Verify Your Data to get started</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="select_date">Select Date</string>
    <string name="booking_confirmed">Booking Confirmed</string>
    <string name="your_booking_id_is">Your booking ID is</string>
    <string name="have_a_wonderful_ride">Have a wonderful ride.</string>
    <string name="Note_your_booking">Note your booking ID for future reference</string>
    <string name="disclaimer">Insurance Verification Disclaimer

The Flexiride App ("the App") provides a platform for vehicle owners to list their cars for rental and for renters to find and book vehicles. While we strive to ensure a safe and reliable experience, we want to make it clear that the App does not verify or validate insurance details provided by users.

User Responsibility:

Verification: All users are responsible for independently verifying the insurance coverage of any vehicle they intend to rent or list on the App. This includes ensuring that the insurance policy covers the intended use, drivers, and circumstances.

Liability: Flexiride does not assume any responsibility for insurance-related matters between users. Any insurance claims, disputes, or issues that may arise are solely the responsibility of the parties involved.

Compliance: Users must comply with all local, state, and national laws and regulations related to insurance requirements for vehicle rentals.

Seek Professional Advice:

If you have any questions or concerns about insurance coverage or requirements, we strongly recommend seeking advice from a qualified insurance professional. Flexiride does not provide insurance advice or services.

By using the App, you acknowledge and agree to the terms of this insurance verification disclaimer. It is your responsibility to exercise due diligence and ensure that you are adequately covered by insurance when using the App for vehicle rentals or listings.</string>
</resources>