<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.BookingSuccess">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/img_car">

        <TextView
            android:id="@+id/booking_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dimen_40dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/booking_confirmed"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_21sp" />

        <TextView
            android:id="@+id/booking_sub_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/booking_title"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/your_booking_id_is"
            android:textColor="@color/my_theme"
            android:textSize="@dimen/text_size_16sp" />

        <TextView
            android:id="@+id/booking_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/booking_sub_txt"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/nunito_bold"
            android:text=""
            android:textColor="@color/accent"
            android:textSize="@dimen/text_size_24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/booking_id"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/have_a_wonderful_ride"
            android:textColor="@color/my_theme"
            android:textSize="@dimen/text_size_14sp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/img_car"
        android:layout_width="160dp"
        android:layout_height="130dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_car" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_above="@+id/rl_bottom"
        android:layout_marginBottom="@dimen/dimen_5dp"
        android:background="@color/dark_gray" />

    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="@dimen/dimen_5dp"
        android:padding="@dimen/dimen_10dp">

        <TextView
            android:id="@+id/txt_end_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dimen_3dp"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:layout_toLeftOf="@id/btn_end"
            android:fontFamily="@font/nunito_reg"
            android:text="@string/Note_your_booking"
            android:textColor="@color/my_theme"
            android:textSize="@dimen/text_size_12sp" />

        <Button
            android:id="@+id/btn_end"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/dimen_5dp"
            android:background="@drawable/coupon_background_clicked"
            android:backgroundTint="@color/accent"
            android:fontFamily="@font/nunito_bold"
            android:paddingStart="@dimen/dimen_20dp"
            android:paddingEnd="@dimen/dimen_20dp"
            android:text="@string/text_continue"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_14sp" />

    </RelativeLayout>


</RelativeLayout>

