<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    tools:context=".presentation.WelcomeActivity">

    <TextView
        android:id="@+id/txt_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_bold"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/btn_owner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/i_m_an_owner"
        android:layout_marginStart="@dimen/dimen_50dp"
        android:layout_marginEnd="@dimen/dimen_50dp"
        android:paddingStart="@dimen/dimen_20dp"
        android:paddingEnd="@dimen/dimen_20dp"
        android:paddingTop="@dimen/dimen_20dp"
        android:paddingBottom="@dimen/dimen_20dp"
        android:textSize="@dimen/text_size_18sp"
        android:layout_marginTop="@dimen/dimen_20dp"
        app:layout_constraintTop_toBottomOf="@id/txt_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btn_renter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/i_m_a_renter"
        android:paddingStart="@dimen/dimen_20dp"
        android:paddingEnd="@dimen/dimen_20dp"
        android:paddingTop="@dimen/dimen_20dp"
        android:paddingBottom="@dimen/dimen_20dp"
        android:layout_marginStart="@dimen/dimen_50dp"
        android:layout_marginEnd="@dimen/dimen_50dp"
        android:textSize="@dimen/text_size_18sp"
        android:layout_marginTop="@dimen/dimen_20dp"
        app:layout_constraintTop_toBottomOf="@id/btn_owner"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/tertiary"
        app:layout_constraintEnd_toEndOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>